name:          etlas-cabal
version:       1.0.2.0
copyright:     2017, TypeLead, Inc.
license:       BSD3
license-file:  LICENSE
author:        TypeLead
maintainer:    typeleadhq@gmail.com
homepage:      https://etlas.typelead.com
bug-reports:   https://github.com/typelead/etlas/issues
synopsis:      Package management for Eta
description:
  Package management for Eta programming language.
category:       Distribution
cabal-version:  >=1.10
build-type:     Simple

source-repository head
  type:     git
  location: https://github.com/typelead/etlas
  subdir:   etlas-cabal

flag parsec
  description:  Use parsec parser
  default:      False
  manual:       True

library
  build-depends:
    array      >= 0.1 && < 0.6,
    base       >= 4.5 && < 5,
    bytestring >= 0.9 && < 1,
    containers >= 0.4 && < 0.6,
    deepseq    >= 1.3 && < 1.5,
    filepath   >= 1.3 && < 1.5,
    pretty     >= 1.1 && < 1.2,
    process    >= 1.1.0.2 && < 1.6,
    time       >= 1.4 && < 1.9,
    directory  >= 1.2 && < 1.4,
    binary     >= 0.7 && < 0.9

  if !os(windows)
    build-depends:
      unix >= 2.5 && < 2.8

  if os(windows)
    build-depends:
      Win32 >= 2.2 && < 2.6

  ghc-options: -Wall -fno-ignore-asserts -fwarn-tabs

  exposed-modules:
    Distribution.Backpack
    Distribution.Backpack.Configure
    Distribution.Backpack.ComponentsGraph
    Distribution.Backpack.ConfiguredComponent
    Distribution.Backpack.DescribeUnitId
    Distribution.Backpack.FullUnitId
    Distribution.Backpack.LinkedComponent
    Distribution.Backpack.ModSubst
    Distribution.Backpack.ModuleShape
    Distribution.Utils.LogProgress
    Distribution.Utils.MapAccum
    Distribution.Compat.CreatePipe
    Distribution.Compat.Environment
    Distribution.Compat.Exception
    Distribution.Compat.Graph
    Distribution.Compat.Internal.TempFile
    Distribution.Compat.Map.Strict
    Distribution.Compat.Prelude.Internal
    Distribution.Compat.ReadP
    Distribution.Compat.Semigroup
    Distribution.Compat.Stack
    Distribution.Compat.Time
    Distribution.Compat.DList
    Distribution.Compiler
    Distribution.InstalledPackageInfo
    Distribution.License
    Distribution.Make
    Distribution.ModuleName
    Distribution.Package
    Distribution.PackageDescription
    Distribution.PackageDescription.Check
    Distribution.PackageDescription.Configuration
    Distribution.PackageDescription.Parse
    Distribution.PackageDescription.PrettyPrint
    Distribution.PackageDescription.Utils
    Distribution.ParseUtils
    Distribution.PrettyUtils
    Distribution.ReadE
    Distribution.Simple
    Distribution.Simple.Bench
    Distribution.Simple.BinaryDist
    Distribution.Simple.Build
    Distribution.Simple.Build.Macros
    Distribution.Simple.Build.PathsModule
    Distribution.Simple.BuildPaths
    Distribution.Simple.BuildTarget
    Distribution.Simple.BuildToolDepends
    Distribution.Simple.CCompiler
    Distribution.Simple.Command
    Distribution.Simple.Compiler
    Distribution.Simple.Configure
    Distribution.Simple.Eta
    Distribution.Simple.GHC
    Distribution.Simple.GHCJS
    Distribution.Simple.Haddock
    Distribution.Simple.HaskellSuite
    Distribution.Simple.Hpc
    Distribution.Simple.Install
    Distribution.Simple.InstallDirs
    Distribution.Simple.JHC
    Distribution.Simple.LHC
    Distribution.Simple.LocalBuildInfo
    Distribution.Simple.PackageIndex
    Distribution.Simple.PreProcess
    Distribution.Simple.PreProcess.Unlit
    Distribution.Simple.Program
    Distribution.Simple.Program.Ar
    Distribution.Simple.Program.Builtin
    Distribution.Simple.Program.Db
    Distribution.Simple.Program.Find
    Distribution.Simple.Program.GHC
    Distribution.Simple.Program.HcPkg
    Distribution.Simple.Program.Hpc
    Distribution.Simple.Program.Internal
    Distribution.Simple.Program.Ld
    Distribution.Simple.Program.Run
    Distribution.Simple.Program.Script
    Distribution.Simple.Program.Strip
    Distribution.Simple.Program.Types
    Distribution.Simple.Register
    Distribution.Simple.Setup
    Distribution.Simple.SrcDist
    Distribution.Simple.Test
    Distribution.Simple.Test.ExeV10
    Distribution.Simple.Test.LibV09
    Distribution.Simple.Test.Log
    Distribution.Simple.UHC
    Distribution.Simple.UserHooks
    Distribution.Simple.Utils
    Distribution.System
    Distribution.TestSuite
    Distribution.Text
    Distribution.Types.AbiHash
    Distribution.Types.AnnotatedId
    Distribution.Types.Benchmark
    Distribution.Types.BenchmarkInterface
    Distribution.Types.BenchmarkType
    Distribution.Types.BuildInfo
    Distribution.Types.BuildType
    Distribution.Types.ComponentInclude
    Distribution.Types.Dependency
    Distribution.Types.ExeDependency
    Distribution.Types.LegacyExeDependency
    Distribution.Types.PkgconfigDependency
    Distribution.Types.DependencyMap
    Distribution.Types.ComponentId
    Distribution.Types.MungedPackageId
    Distribution.Types.PackageId
    Distribution.Types.UnitId
    Distribution.Types.Executable
    Distribution.Types.Library
    Distribution.Types.ForeignLib
    Distribution.Types.ForeignLibType
    Distribution.Types.ForeignLibOption
    Distribution.Types.Module
    Distribution.Types.ModuleReexport
    Distribution.Types.ModuleRenaming
    Distribution.Types.ComponentName
    Distribution.Types.MungedPackageName
    Distribution.Types.PackageName
    Distribution.Types.PkgconfigName
    Distribution.Types.UnqualComponentName
    Distribution.Types.IncludeRenaming
    Distribution.Types.Mixin
    Distribution.Types.SetupBuildInfo
    Distribution.Types.TestSuite
    Distribution.Types.TestSuiteInterface
    Distribution.Types.TestType
    Distribution.Types.GenericPackageDescription
    Distribution.Types.Condition
    Distribution.Types.CondTree
    Distribution.Types.HookedBuildInfo
    Distribution.Types.PackageDescription
    Distribution.Types.SourceRepo
    Distribution.Types.Component
    Distribution.Types.ComponentLocalBuildInfo
    Distribution.Types.LocalBuildInfo
    Distribution.Types.ComponentRequestedSpec
    Distribution.Types.TargetInfo
    Distribution.Utils.Generic
    Distribution.Utils.NubList
    Distribution.Utils.ShortText
    Distribution.Utils.Progress
    Distribution.Verbosity
    Distribution.Version
    Language.Haskell.Extension
    Distribution.Compat.Binary
    Paths_etlas_cabal

  if flag(parsec)
    cpp-options: -DCABAL_PARSEC
    build-depends:
      transformers,
      parsec >= 3.1.9 && <3.2
    build-tools:
      alex >=3.1.4 && <3.3
    exposed-modules:
      Distribution.Compat.Parsec
      Distribution.PackageDescription.Parsec
      Distribution.PackageDescription.Parsec.FieldDescr
      Distribution.Parsec.Class
      Distribution.Parsec.ConfVar
      Distribution.Parsec.Lexer
      Distribution.Parsec.LexerMonad
      Distribution.Parsec.Parser
      Distribution.Parsec.Types.Common
      Distribution.Parsec.Types.Field
      Distribution.Parsec.Types.FieldDescr
      Distribution.Parsec.Types.ParseResult

  other-modules:
    Distribution.Backpack.PreExistingComponent
    Distribution.Backpack.ReadyComponent
    Distribution.Backpack.MixLink
    Distribution.Backpack.ModuleScope
    Distribution.Backpack.UnifyM
    Distribution.Backpack.Id
    Distribution.Utils.UnionFind
    Distribution.Utils.Base62
    Distribution.Compat.CopyFile
    Distribution.Compat.GetShortPathName
    Distribution.Compat.MonadFail
    Distribution.Compat.Prelude
    Distribution.Compat.SnocList
    Distribution.GetOpt
    Distribution.Lex
    Distribution.Utils.String
    Distribution.Simple.GHC.Internal
    Distribution.Simple.GHC.IPI642
    Distribution.Simple.GHC.IPIConvert
    Distribution.Simple.GHC.ImplInfo

  default-language: Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImplicitParams
    KindSignatures
    NondecreasingIndentation
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    Trustworthy
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  if impl(ghc >= 7.11)
    other-extensions: PatternSynonyms
