name:               etlas
-- @VERSION
version:            1.4.0.0
synopsis:           The package manager for Eta.
description:
    The package manager for Eta.
homepage:           https://eta-lang.org
bug-reports:        https://github.com/typelead/etlas/issues
license:            BSD3
license-file:       LICENSE
author:             TypeLead
maintainer:         typeleadhq@gmail.com
copyright:          2017, TypeLead, Inc.
category:           Distribution
build-type:         Custom
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: https://github.com/typelead/etlas/
  subdir:   etlas

flag debug-expensive-assertions
  description:  Enable expensive assertions for testing or debugging
  default:      False
  manual:       True

flag debug-conflict-sets
  description:  Add additional information to ConflictSets
  default:      False
  manual:       True

flag debug-tracetree
  description:  Compile in support for tracetree (used to debug the solver)
  default:      False
  manual:       True

flag parsec
  description:  Use parsec parser. This requires 'etlas-cabal' library built with its parsec flag enabled.
  default:      False
  manual:       True

library
    ghc-options:    -Wall -Werror -fno-warn-name-shadowing -fwarn-tabs

    exposed-modules:
        Distribution.Client.Brancher
        Distribution.Client.BuildReports.Anonymous
        Distribution.Client.BuildReports.Storage
        Distribution.Client.BuildReports.Types
        Distribution.Client.BuildReports.Upload
        Distribution.Client.Check
        Distribution.Client.CmdBench
        Distribution.Client.CmdBuild
        Distribution.Client.CmdConfigure
        Distribution.Client.CmdDeps
        Distribution.Client.CmdFreeze
        Distribution.Client.CmdDocs
        Distribution.Client.CmdRepl
        Distribution.Client.CmdRun
        Distribution.Client.CmdTest
        Distribution.Client.CmdErrorMessages
        Distribution.Client.Config
        Distribution.Client.Configure
        Distribution.Client.Dependency
        Distribution.Client.Dependency.Types
        Distribution.Client.DistDirLayout
        Distribution.Client.Exec
        Distribution.Client.Fetch
        Distribution.Client.FetchUtils
        Distribution.Client.FileMonitor
        Distribution.Client.Freeze
        Distribution.Client.GenBounds
        Distribution.Client.Get
        Distribution.Client.Glob
        Distribution.Client.GlobalFlags
        Distribution.Client.GZipUtils
        Distribution.Client.Haddock
        Distribution.Client.HttpUtils
        Distribution.Client.IndexUtils
        Distribution.Client.IndexUtils.Timestamp
        Distribution.Client.Init
        Distribution.Client.Init.Heuristics
        Distribution.Client.Init.Licenses
        Distribution.Client.Init.Types
        Distribution.Client.Install
        Distribution.Client.InstallPlan
        Distribution.Client.InstallSymlink
        Distribution.Client.JobControl
        Distribution.Client.List
        Distribution.Client.Manpage
        Distribution.Client.Nix
        Distribution.Client.Outdated
        Distribution.Client.PackageHash
        Distribution.Client.PackageUtils
        Distribution.Client.ParseUtils
        Distribution.Client.Patch
        Distribution.Client.ProjectBuilding
        Distribution.Client.ProjectBuilding.Types
        Distribution.Client.ProjectConfig
        Distribution.Client.ProjectConfig.Types
        Distribution.Client.ProjectConfig.Legacy
        Distribution.Client.ProjectOrchestration
        Distribution.Client.ProjectPlanning
        Distribution.Client.ProjectPlanning.Types
        Distribution.Client.ProjectPlanOutput
        Distribution.Client.RebuildMonad
        Distribution.Client.Reconfigure
        Distribution.Client.Run
        Distribution.Client.Sandbox
        Distribution.Client.Sandbox.Index
        Distribution.Client.Sandbox.PackageEnvironment
        Distribution.Client.Sandbox.Timestamp
        Distribution.Client.Sandbox.Types
        Distribution.Client.SavedFlags
        Distribution.Client.Security.DNS
        Distribution.Client.Security.HTTP
        Distribution.Client.Setup
        Distribution.Client.SetupWrapper
        Distribution.Client.SrcDist
        Distribution.Client.BinaryDist
        Distribution.Client.BinaryPackageDb
        Distribution.Client.BinaryUtils
        Distribution.Client.SolverInstallPlan
        Distribution.Client.SourceFiles
        Distribution.Client.Store
        Distribution.Client.Tar
        Distribution.Client.Targets
        Distribution.Client.TargetSelector
        Distribution.Client.Types
        Distribution.Client.Update
        Distribution.Client.Upload
        Distribution.Client.Utils
        Distribution.Client.Utils.Assertion
        Distribution.Client.Utils.Json
        Distribution.Client.World
        Distribution.Client.Win32SelfUpgrade
        Distribution.Client.Compat.ExecutablePath
        Distribution.Client.Compat.FileLock
        Distribution.Client.Compat.FilePerms
        Distribution.Client.Compat.Prelude
        Distribution.Client.Compat.Process
        Distribution.Client.Compat.Semaphore
        Distribution.Solver.Types.ComponentDeps
        Distribution.Solver.Types.ConstraintSource
        Distribution.Solver.Types.DependencyResolver
        Distribution.Solver.Types.Flag
        Distribution.Solver.Types.InstalledPreference
        Distribution.Solver.Types.InstSolverPackage
        Distribution.Solver.Types.LabeledPackageConstraint
        Distribution.Solver.Types.OptionalStanza
        Distribution.Solver.Types.PackageConstraint
        Distribution.Solver.Types.PackageFixedDeps
        Distribution.Solver.Types.PackageIndex
        Distribution.Solver.Types.PackagePath
        Distribution.Solver.Types.PackagePreferences
        Distribution.Solver.Types.PkgConfigDb
        Distribution.Solver.Types.Progress
        Distribution.Solver.Types.ResolverPackage
        Distribution.Solver.Types.Settings
        Distribution.Solver.Types.SolverId
        Distribution.Solver.Types.SolverPackage
        Distribution.Solver.Types.SourcePackage
        Distribution.Solver.Types.Variable
        Distribution.Solver.Modular
        Distribution.Solver.Modular.Assignment
        Distribution.Solver.Modular.Builder
        Distribution.Solver.Modular.Configured
        Distribution.Solver.Modular.ConfiguredConversion
        Distribution.Solver.Modular.ConflictSet
        Distribution.Solver.Modular.Cycles
        Distribution.Solver.Modular.Dependency
        Distribution.Solver.Modular.Explore
        Distribution.Solver.Modular.Flag
        Distribution.Solver.Modular.Index
        Distribution.Solver.Modular.IndexConversion
        Distribution.Solver.Modular.Linking
        Distribution.Solver.Modular.LabeledGraph
        Distribution.Solver.Modular.Log
        Distribution.Solver.Modular.Message
        Distribution.Solver.Modular.Package
        Distribution.Solver.Modular.Preference
        Distribution.Solver.Modular.PSQ
        Distribution.Solver.Modular.RetryLog
        Distribution.Solver.Modular.Solver
        Distribution.Solver.Modular.Tree
        Distribution.Solver.Modular.Validate
        Distribution.Solver.Modular.Var
        Distribution.Solver.Modular.Version
        Distribution.Solver.Modular.WeightedPSQ
        Paths_etlas

    build-depends:
        async      >= 2.0      && < 3,
        array      >= 0.4      && < 0.6,
        base       >= 4.5      && < 5,
        base16-bytestring >= 0.1.1 && < 0.2,
        binary     >= 0.5      && < 0.9,
        bytestring >= 0.9      && < 1,
        etlas-cabal >= 1.0,
        containers >= 0.4      && < 0.6,
        cryptohash-sha256 >= 0.11 && < 0.12,
        deepseq    >= 1.3      && < 1.5,
        echo       >= 0.1.3    && < 0.2,
        edit-distance >= 0.2.2 && < 0.3,
        filepath   >= 1.3      && < 1.5,
        hashable   >= 1.0      && < 2,
        HTTP       >= 4000.1.5 && < 4000.4,
        mtl        >= 2.0      && < 3,
        pretty     >= 1.1      && < 1.2,
        random     >= 1        && < 1.2,
        stm        >= 2.0      && < 3,
        tar        >= 0.5.0.3  && < 0.6,
        time       >= 1.4      && < 1.8,
        zlib       >= 0.5.3    && < 0.7,
        hackage-security >= 0.5.2.2 && < 0.6,
        directory  >= 1.2 && < 1.4,
        process    >= 1.1.0.2  && < 1.6,
        network-uri >= 2.6 && < 2.7,
        network    >= 2.6 && < 2.7,
        bytestring >= 0.10.2

    if os(windows)
      build-depends: Win32 >= 2 && < 3
    else
      build-depends: unix >= 2.5 && < 2.8

    if flag(debug-expensive-assertions)
      cpp-options: -DDEBUG_EXPENSIVE_ASSERTIONS

    if flag(debug-conflict-sets)
      cpp-options: -DDEBUG_CONFLICT_SETS
      build-depends: base >= 4.8

    if flag(debug-tracetree)
      cpp-options: -DDEBUG_TRACETREE
      build-depends: tracetree >= 0.1 && < 0.2

    if flag(parsec)
      cpp-options: -DCABAL_PARSEC

    default-language: Haskell2010

executable etlas
    main-is:        Main.hs
    hs-source-dirs: main

    ghc-options:    -Wall -Werror -fno-warn-name-shadowing -fwarn-tabs -rtsopts

    build-depends:
        etlas,
        etlas-cabal      >= 1.0,
        base,
        directory,
        filepath

    ghc-options: -threaded

    if flag(parsec)
      cpp-options: -DCABAL_PARSEC

    default-language: Haskell2010

custom-setup
  setup-depends: Cabal >= 1.22,
                 base,
                 process   >= 1.1.0.1  && < 1.6,
                 filepath   >= 1.3      && < 1.5
